--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding { //뷰바인딩
+        enabled = true
+    }
 }
 
 dependencies {
