--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".WithdrawalActivity" />
         <activity android:name=".GoodsDetailActivity" /> <!-- 액션바 제거 -->
+        <activity android:name=".ActualPostingActivity"/>
+        <activity android:name=".DisguisedPostingActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
