회원정보 ui 추가 및 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".FindPasswordActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".WithdrawalActivity" />
+        <activity android:name=".UserInformationActivity"/>
         <activity android:name=".GoodsDetailActivity" /> <!-- 액션바 제거 -->
         <activity android:name=".MainActivity">
             <intent-filter>
