홍보뷰 등록 UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.duksunggoodsplatform_2021_android">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".home.AddPromotionActivity"></activity>
+        <activity android:name=".SignUpActivity" />
         <activity android:name=".DepositorActivity" />
         <activity android:name=".FindPasswordActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".WithdrawalActivity" />
-        <activity android:name=".UserInformationActivity"/>
+        <activity android:name=".UserInformationActivity" />
         <activity android:name=".GoodsDetailActivity" /> <!-- 액션바 제거 -->
-        <activity android:name=".ActualPostingActivity"/>
-        <activity android:name=".DisguisedPostingActivity"/>
+        <activity android:name=".ActualPostingActivity" />
+        <activity android:name=".DisguisedPostingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
