--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".home.AddPromotionActivity"></activity>
+        <activity android:name=".InterestListActivity"></activity>
+        <activity android:name=".home.AddPromotionActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".DepositorActivity" />
         <activity android:name=".FindPasswordActivity" />
