로그인, 회원가입 기능 완성. GoodsExFragment 사진 뷰 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".WritingActivity"></activity>
         <activity android:name=".InterestListActivity" />
-        <activity android:name=".home.AddPromotionActivity" />
+        <activity android:name=".AddPromotionActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".DepositorActivity" />
         <activity android:name=".FindPasswordActivity" />
