사용자조회 기능완성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+            android:name=".LookUpUserActivity"
+            android:exported="true" />
         <activity android:name=".CommentActivity"></activity>
         <activity android:name=".WritingActivity" />
         <activity android:name=".InterestListActivity" />
