--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     viewBinding { //뷰바인딩
         enabled = true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 repositories {
@@ -46,6 +49,8 @@ repositories {
 dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation "androidx.recyclerview:recyclerview-selection:1.2.0-alpha01"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
