--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".GoodsDetailActivity" /> <!-- 액션바 제거 -->
         <activity android:name=".ActualPostingActivity" />
         <activity android:name=".ActualFormActivity" />
+        <activity android:name=".FictitiousFormActivity" />
         <activity android:name=".DisguisedPostingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
