--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@
         <activity android:name=".WritingActivity" />
         <activity android:name=".InterestListActivity" />
         <activity android:name=".AddPromotionActivity" />
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".user.SignUpActivity" />
         <activity android:name=".DepositorActivity" />
         <activity android:name=".FindPasswordActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".user.LoginActivity" />
         <activity android:name=".WithdrawalActivity" />
         <activity android:name=".UserInformationActivity" />
         <activity android:name=".GoodsDetailActivity" /> <!-- 액션바 제거 -->
