--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     //okhttp logging interceptor
     implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
 
+    //fragment간 데이터 전달
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
+
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.0.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     implementation 'androidx.multidex:multidex:2.0.1'
